; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto_IkePacket.c_IkeParseDeletePayload.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto_IkePacket.c_IkeParseDeletePayload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_7__ = type { i64, i32, i32, i32 }

@IKE_SA_DOI_IPSEC = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [33 x i8] c"ISAKMP: Invalid DoI Value: 0x%x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IkeParseDeletePayload(%struct.TYPE_6__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_7__, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 1, i32* %10, align 4
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = icmp eq %struct.TYPE_6__* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %2
  %15 = load i32*, i32** %5, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %14, %2
  store i32 0, i32* %3, align 4
  br label %75

18:                                               ; preds = %14
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @ReadBuf(i32* %19, %struct.TYPE_7__* %6, i32 24)
  %21 = sext i32 %20 to i64
  %22 = icmp ne i64 %21, 24
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  store i32 0, i32* %3, align 4
  br label %75

24:                                               ; preds = %18
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 3
  %26 = load i32, i32* %25, align 8
  %27 = call i64 @Endian32(i32 %26)
  %28 = load i64, i64* @IKE_SA_DOI_IPSEC, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %35

30:                                               ; preds = %24
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 3
  %32 = load i32, i32* %31, align 8
  %33 = call i64 @Endian32(i32 %32)
  %34 = call i32 @Debug(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i64 %33)
  store i32 0, i32* %3, align 4
  br label %75

35:                                               ; preds = %24
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 2
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 1
  store i32 %37, i32* %39, align 4
  %40 = call i32 @NewListFast(i32* null)
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 0
  store i32 %40, i32* %42, align 4
  %43 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 1
  %44 = load i32, i32* %43, align 8
  %45 = call i64 @Endian16(i32 %44)
  store i64 %45, i64* %7, align 8
  %46 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  store i64 %47, i64* %8, align 8
  store i64 0, i64* %9, align 8
  br label %48

48:                                               ; preds = %65, %35
  %49 = load i64, i64* %9, align 8
  %50 = load i64, i64* %7, align 8
  %51 = icmp slt i64 %49, %50
  br i1 %51, label %52, label %68

52:                                               ; preds = %48
  %53 = load i32*, i32** %5, align 8
  %54 = load i64, i64* %8, align 8
  %55 = call i32* @ReadBufFromBuf(i32* %53, i64 %54)
  store i32* %55, i32** %11, align 8
  %56 = load i32*, i32** %11, align 8
  %57 = icmp eq i32* %56, null
  br i1 %57, label %58, label %59

58:                                               ; preds = %52
  store i32 0, i32* %10, align 4
  br label %68

59:                                               ; preds = %52
  %60 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %61 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 4
  %63 = load i32*, i32** %11, align 8
  %64 = call i32 @Add(i32 %62, i32* %63)
  br label %65

65:                                               ; preds = %59
  %66 = load i64, i64* %9, align 8
  %67 = add nsw i64 %66, 1
  store i64 %67, i64* %9, align 8
  br label %48

68:                                               ; preds = %58, %48
  %69 = load i32, i32* %10, align 4
  %70 = icmp eq i32 %69, 0
  br i1 %70, label %71, label %74

71:                                               ; preds = %68
  %72 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %73 = call i32 @IkeFreeDeletePayload(%struct.TYPE_6__* %72)
  store i32 0, i32* %3, align 4
  br label %75

74:                                               ; preds = %68
  store i32 1, i32* %3, align 4
  br label %75

75:                                               ; preds = %74, %71, %30, %23, %17
  %76 = load i32, i32* %3, align 4
  ret i32 %76
}

declare dso_local i32 @ReadBuf(i32*, %struct.TYPE_7__*, i32) #1

declare dso_local i64 @Endian32(i32) #1

declare dso_local i32 @Debug(i8*, i64) #1

declare dso_local i32 @NewListFast(i32*) #1

declare dso_local i64 @Endian16(i32) #1

declare dso_local i32* @ReadBufFromBuf(i32*, i64) #1

declare dso_local i32 @Add(i32, i32*) #1

declare dso_local i32 @IkeFreeDeletePayload(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
